# gabgabgurus-backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  copy-docker-compose.dev.yml  copy-docker-compose.yml  docker-compose-ssl.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  index.html  pyproject.toml  setup.cfg
.github/workflows/: deploy-only.yml  deploy.yml  lint-and-tests.yml  lint.yml  manual-lint.yml  manual-run-on-srv.yml  manual-tests.yml  only-run-on-srv.yml  tests.yml
deploy/app/: Dockerfile
deploy/app/scripts/: entrypoint.sh  start.sh
deploy/nginx/templates/: site.conf.template
deploy/scripts/: deploy.sh
deploy/tests/: Dockerfile
deploy/tests/scripts/: entrypoint.sh
docker/app/: Dockerfile
docker/app/scripts/: wait-dependencies.sh
docker/nginx/templates/: site.conf.template  site.conf.template-copy
docker/postgres/: Dockerfile
src/gabgabgurus/api/: http_error_handlers.py  pagination.py  serializers.py  urls.py  ws_error_handlers.py
src/gabgabgurus/api/v1/: serializers.py  urls.py  views.py
src/gabgabgurus/apps/chats/: admin.py  admin_filters.py  apps.py  enums.py  models.py  selectors.py
src/gabgabgurus/apps/hobbies/: admin.py  apps.py  initializers.py  models.py
src/gabgabgurus/apps/languages/: admin.py  apps.py  enums.py  initializers.py  models.py
src/gabgabgurus/apps/management_commands/: apps.py  (+1 more)
src/gabgabgurus/common/: decorators.py  parsers.py  renderers.py  serializer_fields.py  validators.py
src/gabgabgurus/config/: __init__.py  api_config.py  asgi.py  constants.py  exceptions.py  middleware.py  urls.py  wsgi.py
src/gabgabgurus/init_data/: countries_languages.json  hobbies.json
src/gabgabgurus/templates/: room.html
src/scripts/: format.sh  lint.sh
tests/: conftest.py  settings.py
tests/custom_faker/: __init__.py
tests/custom_faker/providers/: __init__.py  permission.py  user.py
tests/fixtures/: countries.py  fake_db.py  languages.py  test_app.py  test_client.py  users.py
tests/functional/: settings.py
tests/unit/users/: test_services.py
tests/utils/: api_client.py  db.py  decorators.py  helpers.py  models.py  url.py
(+116 files in other folders)
